Fix embeddings and similarity search